--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ matplotlib==3.4.3
 multipledispatch==0.6.0
 networkx==2.6.3
 numpy==1.21.3
+opencv-python==4.5.4.58
 Pillow==8.4.0
 PyOpenGL==3.1.5
 PyOpenGL-accelerate==3.1.5
